--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,20 +6,20 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #990000;
-    --ifm-color-primary-dark: #8a0000;
-    --ifm-color-primary-darker: #820000;
-    --ifm-color-primary-darkest: #6b0000;
-    --ifm-color-primary-light: #a80000;
-    --ifm-color-primary-lighter: #b00000;
-    --ifm-color-primary-lightest: #c70000;
+  --ifm-color-primary: #021d57;
+    --ifm-color-primary-dark: #031d53;
+    --ifm-color-primary-darker: #021c55;
+    --ifm-color-primary-darkest: #02143b;
+    --ifm-color-primary-light: #022879;
+    --ifm-color-primary-lighter: #023197;
+    --ifm-color-primary-lightest: #043cb6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #990000;
+  --ifm-color-primary: #021d57;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
